unpackaged/main/default/objects/n2de__Capping_Pattern__c/n2de__Capping_Pattern__c.object-meta.xml
<CustomObject>
    <label>Capping Pattern</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capping Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>