unpackaged/main/default/objects/n2de__Capping_Pattern__c/fields/n2de__Defaults_json__c.field-meta.xml
<CustomField>
    <fullName>n2de__Defaults_json__c</fullName>
    <description>JSON data of default cap values for duration</description>
    <label>Default cap values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>