unpackaged/main/default/objects/n2de__Capping_Pattern__c/fields/n2de__Tag_collection__c.field-meta.xml
<CustomField>
    <fullName>n2de__Tag_collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Collection of tags to apply team-level caps to.</inlineHelpText>
    <label>Tag collection</label>
    <referenceTo>n2de__Tag_Category__c</referenceTo>
    <relationshipLabel>Capping Patterns</relationshipLabel>
    <relationshipName>Capping_Patterns</relationshipName>
    <type>Lookup</type>
</CustomField>