unpackaged/main/default/objects/n2de__Capping_Pattern__c/fields/n2de__Type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Type__c</fullName>
    <inlineHelpText>The method used to control the maximum number of objects that are distributed to members of the team.</inlineHelpText>
    <label>Cap type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Half hourly</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Load balanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>